fix scroll top on iOS

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -444,6 +444,7 @@ label {
   background: var(--tg-primary-color);
   transition: 1s ease;
   border: none;
+  padding: 0;
 }
 
 .scroll-top.open {
